--- a/apple/apple.html
+++ b/apple/apple.html
@@ -18,7 +18,7 @@
 <body background="background.jpg">
 <center>
   <h1 class="btn btn-info heading">Object Detection</h1>
-  <a href="index.html" class="btn">Back</a>
+  <a href="../index.html" class="btn">Back</a>
   <br>
   <h3 id="status" class="btn btn-danger"></h3>
   <br>
