--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
     <br><br>
     <a href="ball\ball.html" class="btn ">FOOTBALL</a>
     <br> <br><br>
-    <a href="boy\boy.html" class="btn ">BOY</a>
+    <a href="boy\boy.html" class="btn ">PERSON</a>
     <br> <br><br>
-  <a href="desk\desk.html" class="btn ">DESK</a>
+  <a href="car\car.html" class="btn ">CAR</a>
   <br> <br><br>
   <a href="laptop\laptop.html" class="btn ">LAPTOP</a>
   <br> <br><br>
