--- a/index.html
+++ b/index.html
@@ -12,22 +12,17 @@
   <script src="https://unpkg.com/ml5@latest/dist/ml5.min.js"></script>
   
   <link rel="stylesheet" type="text/css" href="style.css">
-
 </head>
 
-<body background="background.jpeg">
+<body background="background.jpg">
   <center>
-    <h2 >Object Detection</h2>
-    <br><br>
-    <a href="ball\ball.html" class="btn ">FOOTBALL</a>
-    <br> <br><br>
-    <a href="boy\boy.html" class="btn ">BOY</a>
-    <br> <br><br>
-  <a href="desk\desk.html" class="btn ">DESK</a>
-  <br> <br><br>
-  <a href="laptop\laptop.html" class="btn ">LAPTOP</a>
-  <br> <br><br>
-  <a href="apple\apple.html" class="btn ">FRUIT</a>
+    <h1 class="btn btn-info heading">BABY MONITOR
+      <label>-IF THE CHILD IS NOT DETECTED THE ALARM WILL SOUND</label>
+    </h1>
+
+    <h3 id="status" class="btn btn-danger"></h3>
+    <h3 class="btn btn-warning" id="presence"></h3>
+ 
   </center>
 
   <script src="main.js"></script>
