--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 
-<body background="background.jpg">
+<body background="https://as2.ftcdn.net/v2/jpg/01/40/61/05/1000_F_140610508_swTBtr1iE6FQNmimURcmrB8m0SagWXoF.jpg">
   <center>
     <h1 class="btn btn-info heading">BABY MONITOR
       <label>-IF THE CHILD IS NOT DETECTED THE ALARM WILL SOUND</label>
